# Sistema-de-Gestion-para-un-Concesionario-de-Carros-Usados

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  tests.py
.github/workflows/: docs.yml  tests.yml
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md  reference.md
docs/user-guide/: commands.md  persistence.md
getting-started/: index.html
interfaces/GUI/: api.py  streamLit_app.py
reference/: index.html
search/: search_index.json
src/mi_app/: exceptions.py  models.py  services.py  storage.py
src/mi_app/models/: __init__.py  cliente.py  vehiculo.py  venta.py
user-guide/commands/: index.html
user-guide/persistence/: index.html
