[project]
name = "sistema-de-gestion-para-un-concesionario-de-carros-usados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.2",
    "radon>=6.0.1",
    "requests>=2.32.5",
    "ruff>=0.15.6",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
]

[tool.pytest.ini_options]
pythonpath = "."